--- a/src/widget/form/input/input.demo.html
+++ b/src/widget/form/input/input.demo.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link href="/page/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/page/lib/bootstrap/font-awesome/css/font-awesome.css" rel="stylesheet">
-    <link href="/page/lib/bootstrap/css/animate.css" rel="stylesheet">
-    <link href="/page/lib/bootstrap/css/style.css" rel="stylesheet">
-    <link href="/page/src/css/page.css" rel="stylesheet">
+    <link href="/page2/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/page2/lib/bootstrap/font-awesome/css/font-awesome.css" rel="stylesheet">
+    <link href="/page2/lib/bootstrap/css/animate.css" rel="stylesheet">
+    <link href="/page2/lib/bootstrap/css/style.css" rel="stylesheet">
+    <link href="/page2/src/css/page.css" rel="stylesheet">
 </head>
 <body ms-skip>
 <br>
@@ -56,25 +56,25 @@
 
     </div>
 </div>
-<script src="/page/bower_components/mootools/Source/Core/Core.js"></script>
-<script src="/page/bower_components/mootools/Source/Types/Array.js"></script>
-<script src="/page/bower_components/mootools/Source/Types/String.js"></script>
-<script src="/page/bower_components/mootools/Source/Types/Object.js"></script>
-<script src="/page/bower_components/mootools/Source/Types/Number.js"></script>
-<script src="/page/bower_components/mootools/Source/Types/Function.js"></script>
-<script src="/page/bower_components/mootools/Source/Class/Class.js"></script>
-<script src="/page/bower_components/mootools/Source/Class/Class.Extras.js"></script>
-<script src="/page/thirdpart/products-WB0R5L90S/Static_Full_Version/js/jquery-2.1.1.js"></script>
-<script src="/page/thirdpart/products-WB0R5L90S/Static_Full_Version/js/bootstrap.js"></script>
-<script src="/page/lib/My97DatePicker/WdatePicker.js"></script>
+<script src="/page2/bower_components/mootools/Source/Core/Core.js"></script>
+<script src="/page2/bower_components/mootools/Source/Types/Array.js"></script>
+<script src="/page2/bower_components/mootools/Source/Types/String.js"></script>
+<script src="/page2/bower_components/mootools/Source/Types/Object.js"></script>
+<script src="/page2/bower_components/mootools/Source/Types/Number.js"></script>
+<script src="/page2/bower_components/mootools/Source/Types/Function.js"></script>
+<script src="/page2/bower_components/mootools/Source/Class/Class.js"></script>
+<script src="/page2/bower_components/mootools/Source/Class/Class.Extras.js"></script>
+<script src="/page2/thirdpart/products-WB0R5L90S/Static_Full_Version/js/jquery-2.1.1.js"></script>
+<script src="/page2/thirdpart/products-WB0R5L90S/Static_Full_Version/js/bootstrap.js"></script>
+<script src="/page2/lib/My97DatePicker/WdatePicker.js"></script>
 
 
 <script>
     $.noConflict();
 </script>
-<!--<script src="/page/bower_components/avalon/avalon.js" data-main="/page/dist/page-build"></script>-->
-<script src="/page/bower_components/avalon/avalon.js" ></script>
-<!--<script src="/page/dist/page-build.js"></script>-->
+<!--<script src="/page2/bower_components/avalon/avalon.js" data-main="/page2/dist/page-build"></script>-->
+<script src="/page2/bower_components/avalon/avalon.js" ></script>
+<!--<script src="/page2/dist/page-build.js"></script>-->
 
 <script>
     function valForm(){
@@ -161,7 +161,5 @@ for(var i=0; i<1;i++) {
         //console.log(inq);
     });
 </script>
-<!--<script src="bower_components/avalon/avalon.js" ></script>-->
-<!--<script src="dist/page-build.js" data-main="demo.js"></script>-->
 </body>
 </html>
