--- a/src/widget/form/textarea/textarea.demo.html
+++ b/src/widget/form/textarea/textarea.demo.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link href="/page/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/page/lib/bootstrap/font-awesome/css/font-awesome.css" rel="stylesheet">
-    <link href="/page/lib/bootstrap/css/animate.css" rel="stylesheet">
-    <link href="/page/lib/bootstrap/css/style.css" rel="stylesheet">
-    <link href="/page/src/css/page.css" rel="stylesheet">
+    <link href="/Page2/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/Page2/lib/bootstrap/font-awesome/css/font-awesome.css" rel="stylesheet">
+    <link href="/Page2/lib/bootstrap/css/animate.css" rel="stylesheet">
+    <link href="/Page2/lib/bootstrap/css/style.css" rel="stylesheet">
+    <link href="/Page2/src/css/page.css" rel="stylesheet">
 </head>
 <body>
 <br>
@@ -40,12 +40,12 @@
             </div>
             <div class="ibox-content">
                 <div class="row">
-                    <div class="col-md-4" id="nameContainer">
-
+                    <div class="col-md-4">
+                        <textarea id="nameContainer" class="form-control form-widget-to-focus-class"></textarea>
                     </div>
 
-                    <div class="col-md-4" id="phoneContainer">
-
+                    <div class="col-md-4">
+                        <textarea id="phoneContainer" class="form-control form-widget-to-focus-class"></textarea>
                     </div>
                     <div class="col-md-4" id="btnContainer">
                         <button onclick="valForm();">校验表单</button>
@@ -56,21 +56,21 @@
 
     </div>
 </div>
-<script src="/page/bower_components/mootools/Source/Core/Core.js"></script>
-<script src="/page/bower_components/mootools/Source/Types/Array.js"></script>
-<script src="/page/bower_components/mootools/Source/Types/String.js"></script>
-<script src="/page/bower_components/mootools/Source/Types/Object.js"></script>
-<script src="/page/bower_components/mootools/Source/Types/Number.js"></script>
-<script src="/page/bower_components/mootools/Source/Types/Function.js"></script>
-<script src="/page/bower_components/mootools/Source/Class/Class.js"></script>
-<script src="/page/bower_components/mootools/Source/Class/Class.Extras.js"></script>
-<script src="/page/thirdpart/products-WB0R5L90S/Static_Full_Version/js/jquery-2.1.1.js"></script>
-<script src="/page/thirdpart/products-WB0R5L90S/Static_Full_Version/js/bootstrap.js"></script>
+<script src="/Page2/bower_components/mootools/Source/Core/Core.js"></script>
+<script src="/Page2/bower_components/mootools/Source/Types/Array.js"></script>
+<script src="/Page2/bower_components/mootools/Source/Types/String.js"></script>
+<script src="/Page2/bower_components/mootools/Source/Types/Object.js"></script>
+<script src="/Page2/bower_components/mootools/Source/Types/Number.js"></script>
+<script src="/Page2/bower_components/mootools/Source/Types/Function.js"></script>
+<script src="/Page2/bower_components/mootools/Source/Class/Class.js"></script>
+<script src="/Page2/bower_components/mootools/Source/Class/Class.Extras.js"></script>
+<script src="/Page2/thirdpart/products-WB0R5L90S/Static_Full_Version/js/jquery-2.1.1.js"></script>
+<script src="/Page2/thirdpart/products-WB0R5L90S/Static_Full_Version/js/bootstrap.js"></script>
 
 <script>
     $.noConflict();
 </script>
-<script src="/page/bower_components/avalon/avalon.js"></script>
+<script src="/Page2/bower_components/avalon/avalon.js"></script>
 <script>
     function valForm(){
         var validateTool = Page.create("validation",{onlyError:true});//后续由系统统一创建，只需调用即可
@@ -83,20 +83,14 @@
 
         //获取校验规则
         var formRules = {};
-        formRules.username =  comps.username.getAttr("validationRules");
-        formRules.phone =  comps.phone.getAttr("validationRules");
+        formRules.username =  comps.username.getAttr("$validationRules");
+        formRules.phone =  comps.phone.getAttr("$validationRules");
         formRules._global = [//_global 为固定
             {
                 "ruleId": "notEqualField",
                 "field1": "username",
                 "field2": "phone"
             }
-//            ,
-//            {
-//                "ruleId": "greaterThan",
-//                "field1": "username",
-//                "field2": "phone"
-//            }
         ];
         //进行校验
         var valRes = validateTool.validateObject(formValues,formRules);
@@ -106,7 +100,7 @@
             alert("校验结果："+JSON.stringify(valRes.errorMsg));
         }
     }
-    require(["../../../page/src/Bootstrap"], function () {
+    require(["../../../Page2/src/Bootstrap"], function () {
         var inp = Page.create("textarea", {
             $parentId: 'nameContainer',
             value: '',
