--- a/src/widget/form/tooltip/tooltip.demo.html
+++ b/src/widget/form/tooltip/tooltip.demo.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link href="/page/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/page/lib/bootstrap/font-awesome/css/font-awesome.css" rel="stylesheet">
-    <link href="/page/lib/bootstrap/css/animate.css" rel="stylesheet">
-    <link href="/page/lib/bootstrap/css/style.css" rel="stylesheet">
-    <link href="/page/src/css/page.css" rel="stylesheet">
+    <link href="/Page2/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/Page2/lib/bootstrap/font-awesome/css/font-awesome.css" rel="stylesheet">
+    <link href="/Page2/lib/bootstrap/css/animate.css" rel="stylesheet">
+    <link href="/Page2/lib/bootstrap/css/style.css" rel="stylesheet">
+    <link href="/Page2/src/css/page.css" rel="stylesheet">
 
-   <!-- <link href="../../../../lib/kendoui/styles/kendo.common.min.css" rel="stylesheet">
+   <!--<link href="../../../../lib/kendoui/styles/kendo.common.min.css" rel="stylesheet">
     <link href="../../../../lib/kendoui/styles/kendo.default.min.css" rel="stylesheet">-->
 </head>
 <body>
@@ -49,64 +49,50 @@
                     <div class="col-md-4" id="widgetContainer1">
                         <input type="button" id="btn2" value="测试按钮" title="从右边出来tip"/>
                     </div>
-                    <div class="col-md-1" id="widgetContainer2">
-                        <div id="btn3">
-                            来自来自来自来自来自来自来自来自
-                            来自来自来自来自来自来自来自来自
-                            来自来自来自来自来自来自来自来自
-                            来自来自来自来自来自来自来自来自
-                            来自来自来自来自来自来自来自来自
-                            来自来自来自来自来自来自来自来自
-
-
-
-                        </div>
-                        ==============
-                        <div id="btn5" style="width:30px;height:20px;">
-                            来自来自来自来自来自来自来自来自
-                        </div>
-                    </div>
-
                 </div>
             </div>
         </div>
 
     </div>
 </div>
-<script src="/page/bower_components/mootools/Source/Core/Core.js"></script>
-<script src="/page/bower_components/mootools/Source/Types/Array.js"></script>
-<script src="/page/bower_components/mootools/Source/Types/String.js"></script>
-<script src="/page/bower_components/mootools/Source/Types/Object.js"></script>
-<script src="/page/bower_components/mootools/Source/Types/Number.js"></script>
-<script src="/page/bower_components/mootools/Source/Types/Function.js"></script>
-<script src="/page/bower_components/mootools/Source/Class/Class.js"></script>
-<script src="/page/bower_components/mootools/Source/Class/Class.Extras.js"></script>
-<script src="/page/thirdpart/products-WB0R5L90S/Static_Full_Version/js/jquery-2.1.1.js"></script>
-<script src="/page/thirdpart/products-WB0R5L90S/Static_Full_Version/js/bootstrap.js"></script>
+<script src="/Page2/bower_components/mootools/Source/Core/Core.js"></script>
+<script src="/Page2/bower_components/mootools/Source/Types/Array.js"></script>
+<script src="/Page2/bower_components/mootools/Source/Types/String.js"></script>
+<script src="/Page2/bower_components/mootools/Source/Types/Object.js"></script>
+<script src="/Page2/bower_components/mootools/Source/Types/Number.js"></script>
+<script src="/Page2/bower_components/mootools/Source/Types/Function.js"></script>
+<script src="/Page2/bower_components/mootools/Source/Class/Class.js"></script>
+<script src="/Page2/bower_components/mootools/Source/Class/Class.Extras.js"></script>
+<script src="/Page2/thirdpart/products-WB0R5L90S/Static_Full_Version/js/jquery-2.1.1.js"></script>
+<script src="/Page2/thirdpart/products-WB0R5L90S/Static_Full_Version/js/bootstrap.js"></script>
 
 <script>
     $.noConflict();
 </script>
-<script src="/page/bower_components/avalon/avalon.js"></script>
+<script src="/Page2/bower_components/avalon/avalon.js"></script>
 <script>
     tip1 = null;
     tip2 = null;
     require(["../../src/Bootstrap"], function () {
         tip1 = Page.create("tooltip", {
-           content: '从左边出提示信息内容<br />111111',
             $id: 'tip1',
-            target:'btn1',
-            position:'right',
-            autoHide:true,
-            className:"whitetip"
+            content: '从左边出提示信息内容<br />111111',
+            $opts:{
+                position:'left',
+                autoHide:true
+            },
+            $target:'btn1',
+            $className:"whitetip"
         });
         tip1.render();
         tip2 = Page.create("tooltip", {
-            content: '从右边出提示信息内容',
             $id: 'tip2',
-            target:'btn3',
-            position:'right',
-            autoHide:false
+            $target:'btn2',
+            content: '从右边出提示信息内容',
+            $opts:{
+                position:'right',
+                autoHide:false
+            }
         });
 
         tip2.render();
