修改richeditor组件相关

--- a/src/widget/form/tooltip/tooltip.demo.html
+++ b/src/widget/form/tooltip/tooltip.demo.html
@@ -66,6 +66,11 @@
 <script src="/Page2/thirdpart/products-WB0R5L90S/Static_Full_Version/js/jquery-2.1.1.js"></script>
 <script src="/Page2/thirdpart/products-WB0R5L90S/Static_Full_Version/js/bootstrap.js"></script>
 
+<!--依赖的外部组件kendoui-->
+<script src="/Page2/lib/kendoui/js/kendo.core.js"></script>
+<script src="/Page2/lib/kendoui/js/kendo.popup.js"></script>
+<script src="/Page2/lib/kendoui/js/kendo.tooltip.js"></script>
+
 <script>
     $.noConflict();
 </script>
