--- a/src/widget/form/maskedtextbox/maskedtextbox.demo.html
+++ b/src/widget/form/maskedtextbox/maskedtextbox.demo.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link href="/page/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/page/lib/bootstrap/font-awesome/css/font-awesome.css" rel="stylesheet">
-    <link href="/page/lib/bootstrap/css/animate.css" rel="stylesheet">
-    <link href="/page/lib/bootstrap/css/style.css" rel="stylesheet">
-    <link href="/page/src/css/page.css" rel="stylesheet">
+    <link href="/Page2/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/Page2/lib/bootstrap/font-awesome/css/font-awesome.css" rel="stylesheet">
+    <link href="/Page2/lib/bootstrap/css/animate.css" rel="stylesheet">
+    <link href="/Page2/lib/bootstrap/css/style.css" rel="stylesheet">
+    <link href="/Page2/src/css/page.css" rel="stylesheet">
 </head>
 <body>
-<br>
-
 <div class="container">
     <div class="row">
         <div class="ibox float-e-margins">
@@ -40,12 +38,12 @@
             </div>
             <div class="ibox-content">
                 <div class="row">
-                    <div class="col-md-4" id="nameContainer">
-
+                    <div class="col-md-4">
+                        <input id="nameContainer" class="form-control"/>
                     </div>
 
-                    <div class="col-md-4" id="phoneContainer">
-
+                    <div class="col-md-4">
+                        <input id="phoneContainer" class="form-control"/>
                     </div>
                     <div class="col-md-4" id="btnContainer">
                         <button onclick="valForm();">校验表单</button>
@@ -56,21 +54,25 @@
 
     </div>
 </div>
-<script src="/page/bower_components/mootools/Source/Core/Core.js"></script>
-<script src="/page/bower_components/mootools/Source/Types/Array.js"></script>
-<script src="/page/bower_components/mootools/Source/Types/String.js"></script>
-<script src="/page/bower_components/mootools/Source/Types/Object.js"></script>
-<script src="/page/bower_components/mootools/Source/Types/Number.js"></script>
-<script src="/page/bower_components/mootools/Source/Types/Function.js"></script>
-<script src="/page/bower_components/mootools/Source/Class/Class.js"></script>
-<script src="/page/bower_components/mootools/Source/Class/Class.Extras.js"></script>
-<script src="/page/thirdpart/products-WB0R5L90S/Static_Full_Version/js/jquery-2.1.1.js"></script>
-<script src="/page/thirdpart/products-WB0R5L90S/Static_Full_Version/js/bootstrap.js"></script>
+<script src="/Page2/bower_components/mootools/Source/Core/Core.js"></script>
+<script src="/Page2/bower_components/mootools/Source/Types/Array.js"></script>
+<script src="/Page2/bower_components/mootools/Source/Types/String.js"></script>
+<script src="/Page2/bower_components/mootools/Source/Types/Object.js"></script>
+<script src="/Page2/bower_components/mootools/Source/Types/Number.js"></script>
+<script src="/Page2/bower_components/mootools/Source/Types/Function.js"></script>
+<script src="/Page2/bower_components/mootools/Source/Class/Class.js"></script>
+<script src="/Page2/bower_components/mootools/Source/Class/Class.Extras.js"></script>
+<script src="/Page2/thirdpart/products-WB0R5L90S/Static_Full_Version/js/jquery-2.1.1.js"></script>
+<script src="/Page2/thirdpart/products-WB0R5L90S/Static_Full_Version/js/bootstrap.js"></script>
+
+<!--依赖的外部组件kendoui-->
+<script src="/Page2/lib/kendoui/js/kendo.core.js"></script>
+<script src="/Page2/lib/kendoui/js/kendo.maskedtextbox.js"></script>
 
 <script>
     $.noConflict();
 </script>
-<script src="/page/bower_components/avalon/avalon.js"></script>
+<script src="/Page2/bower_components/avalon/avalon.js"></script>
 <script>
     function valForm(){
         var validateTool = Page.create("validation",{onlyError:true});//后续由系统统一创建，只需调用即可
@@ -78,25 +80,19 @@
         //获取数据
         var comps = Page.manager.components;
         var formValues = {};
-//        formValues.username = comps.username.getValue();
+        formValues.username = comps.username.getValue();
         formValues.phone = comps.phone.getValue();
 
         //获取校验规则
         var formRules = {};
-//        formRules.username =  comps.username.getAttr("validationRules");
-        formRules.phone =  comps.phone.getAttr("validationRules");
+        formRules.username =  comps.username.getAttr("$validationRules");
+        formRules.phone =  comps.phone.getAttr("$validationRules");
         formRules._global = [//_global 为固定
             {
                 "ruleId": "notEqualField",
                 "field1": "username",
                 "field2": "phone"
             }
-//            ,
-//            {
-//                "ruleId": "greaterThan",
-//                "field1": "username",
-//                "field2": "phone"
-//            }
         ];
         //进行校验
         var valRes = validateTool.validateObject(formValues,formRules);
@@ -107,47 +103,39 @@
         }
     }
     require(["../../src/Bootstrap"], function () {
-//        var inp = Page.create("maskedtextbox", {
-//            $parentId: 'nameContainer',
-//            value: '',
-//            required: false,
-//            glyphicon: 'glyphicon-ok',
-//            message: '请输入2-5个汉字',
-//            label: '您的姓名',
-//            status:"disabled",
-//            validationRules: {
-//                required:true,//options中为false时，此处可重开启校验
-//                length: {
-//                    maxLen: 5,
-//                    minLen: 2
-//                },
-//                regex: {
-//                    regexStr: "/^[\u4e00-\u9fa5]+$/",
-//                    customErrMsg:"只能输入汉字"
-//                }
-//            },
-//            showErrorMessage:true,
-//            $id: 'username',
-//            mask:"(000)000000"
-//        });
-//        inp.render();
+        var inp = Page.create("maskedtextbox", {
+            $parentId: 'nameContainer',
+            value: '',
+            $required: false,
+            $glyphicon: 'glyphicon-ok',
+            $message: '请输入2-5个汉字',
+            $label: '您的姓名',
+            $showErrorMessage:true,
+            $id: 'username',
+            $opts:{
+                mask:"(000)000000"
+            }
+        });
+        inp.render();
         var inq = Page.create("maskedtextbox", {
             $parentId: 'phoneContainer',
-            required: true,
-            glyphicon: 'glyphicon-ok',
-            message: '请输入手机号',
-            label: '联系方式',
-            validationRules: {
+            $required: true,
+            $glyphicon: 'glyphicon-ok',
+            $message: '请输入手机号',
+            $label: '联系方式',
+            $validationRules: {
                 lengthFix: {
                     fixLen: 11
                 },
                 required:true,//设置为false可关闭校验
                 mobilePhone:true
             },
-            showErrorMessage:true,
+            $showErrorMessage:true,
             $id: 'phone',
-            mask:"00000000000",
-            promptChar:"-"
+            $opts:{
+                mask:"00000000000",
+                promptChar:"-"
+            }
         });
         inq.render();
         //console.log(inq);
