修改slider组件相关

--- a/src/widget/form/slider/slider.demo.html
+++ b/src/widget/form/slider/slider.demo.html
@@ -88,6 +88,7 @@
             $id: 'username',
             $label:"双向slider",
             $multi:true,
+            value:'1,2',
             $opts:{
                 min: 0,
                 max: 10,
