--- a/src/widget/form/richeditor/RicheditorWidget.html
+++ b/src/widget/form/richeditor/RicheditorWidget.html
@@ -1,8 +1,8 @@
-<div ms-visible="show">
+<div ms-visible="$show">
     <div ms-visible="status!='readonly'">
-        <textarea ms-attr-id="'tex_'+vid" ms-attr-width="width" ms-attr-width="height" class="e-richEditor"/>
+        <textarea ms-attr-id="'tex_'+$vid" class="e-richEditor" ms-duplex="value"/>
     </div>
-    <div ms-if="status=='readonly'" ms-attr-width="width" ms-attr-width="height" class="e-richEditorShowCon">
+    <div ms-if="status=='readonly'" class="e-richEditorShowCon">
        {{value|html}}
     </div>
 </div>
