--- a/src/widget/simple/simpleGrid.demo.html
+++ b/src/widget/simple/simpleGrid.demo.html
@@ -43,10 +43,10 @@
                 </div>
 
                 <div class="row" style="" width="200px">
-                    <div class="col-md-12" id="simpleGrid">
+                <div class="col-md-12" id="simpleGrid">
 
-                    </div>
                 </div>
+            </div>
 
             </div>
         </div>
@@ -67,47 +67,89 @@
             syncUrl: '',
             model:{mainAlias:'ds1'}
         });
-        var metaData = null;
+        var metaData = metaData;
         simpleGrid = Page.create("simpleGrid", {
             $parentId: 'simpleGrid',
             idField:"wid",
             $id:"simpleGrid",
-
             showCheckbox:true,
+            showIndex:false,
             usePager:true,
+            width:"1000px",
+            showPageBeforeAfterCount:4,
+            defaultAlign:"left",
+            canSort:true,
+            canSortOpColumn:true,
+            multiSort:false,//复合排序
+            canMoveDataUpandDown:true,
             //multiCheck:false,
-            //canSort:true,
             //allChecked:false,
             dataSetId: ds.getId(),
             mouseoverToActive:true,
             //canCustomCols:true,
-            metaDataObj:metaData,
+            //metaDataObj:metaData,
             fixedCols:['name','birthDate'],
-
+            //isMerge:true,
             editComps:[],
             columns:[
-                {title:"姓名",dataField:"name",orderType:"asc",disabledEdit:false},
-                {title:"出生年月",dataField:"birthDate",orderType:"desc",xtype:"input",hidden:false},
-                {title:"入学时间",dataField:"rxDate",xtype:"datepicker"},
-                {title:"是否党员",dataField:"isParty",xtype:"switch",showDisplay:true},
-
-                {title:"备注",dataField:"notes",hidden:true,sortDisabled:true}
+                {title:"出生年月",dataField:"birthDate",orderType:"desc",xtype:"input",hidden:false,width:"380px",
+                    titleAlign:"center",textAlign:"center"},
+                {title:"入学时间",dataField:"rxDate",xtype:"datepicker",width:"380px",
+                    titleAlign:"center",textAlign:"center"},
+                {title:"是否党员",dataField:"isParty",xtype:"switch",showDisplay:true,width:"380px",
+                    titleAlign:"center",textAlign:"center",isOpColumn:true},
+                {title:"备注",dataField:"notes",hidden:true,sortDisabled:true,width:"380px",
+                    titleAlign:"center"},
+                {title:"姓名",dataField:"name",orderType:"asc",disabledEdit:false,width:"380px",
+                    titleAlign:"center"}
             ],
-            opColumns:[{title:"自定义操作",
-                width:'15%',
-                position:2,
-                template:"<a href='javascript:alert(1)'>位置随意</a> | " +
-                "<a href='javascript:deleteActive();'>Delete</a>"},
-                {title:"自定义列",
-                    width:'12%',
+           /* data: [
+                {
+                    "wid":"001",
+                    "name": "李肉肉",
+                    "sex": "002",
+                    "sexDisplay": "女",
+                    "birthDate": "1989-11-03",
+                    "rxDate": "2007-09-02",
+                    "isParty": 0,
+                    "isParty_DISPLAY":"no",
+                    "className": "信息0701班",
+                    "checked":"false",
+                    "notes": "",
+                    "state":"edit"
+                },
+                {
+                    "wid":"002",
+                    "name": "李肉肉",
+                    "sex": "002",
+                    "sexDisplay": "女",
+                    "birthDate": "1987-03-19",
+                    "rxDate": "2007-09-02",
+                    "isParty": 1,
+                    "isParty_DISPLAY":"是",
+                    "className": "信息0701班",
+                    "checked":"true",
+                    "state":"edit",
+                    "notes": ""
+                }],*/
+            opColumns:[{title:"自定义操作A",
+                    width:'300px',
+                    position:2,
+                    textAlign:"center",
+                    titleAlign:"center",
+                    template:"<a href='javascript:alert(1)'>位置随意</a> | " +
+                    "<a href='javascript:deleteActive();'>Delete</a>"},
+                     {title:"自定义列B",
+                    width:'300px',
                     position:'end',
+                    textAlign:"center",
+                    titleAlign:"center",
                     template:"<a ms-click='editMyRow(vid,rowdata,this);'>编辑／完成</a>"}],
             //行编辑
             canEdit:true,
             dbClickToEditRow:true,
-            multiSort:true,//复合排序
-            //clickToEditField:false,
-            //editMultiRow:false, //同时编辑多行
+            //clickToEditField:true,
+            editMultiRow:false, //同时编辑多行
             genTest:function(rowData,col){
                 if(rowData) {
                     if (rowData.sex ==2) {
@@ -188,26 +230,26 @@
             for(var s=0;s<cols.length;s++){
                 var coli = cols[s];
                 if(coli&&coli.dataField) {
-                    var fieldName = coli.dataField;
-                    var xtype = coli.xtype || "input";
-                    var editField = Page.create(xtype, {
-                        $parentId: '__currentEditField_'+fieldName,
-                        parentTpl:"inline",
-                        value: row[fieldName],
-                        showLabel: false,
-                        bindField:fieldName,
-                        validationRules:coli.validationRules,
-                        showErrorMessage:true,
+                var fieldName = coli.dataField;
+                var xtype = coli.xtype || "input";
+                var editField = Page.create(xtype, {
+                    $parentId: '__currentEditField_'+fieldName,
+                    parentTpl:"inline",
+                    value: row[fieldName],
+                    showLabel: false,
+                    bindField:fieldName,
+                    validationRules:coli.validationRules,
+                    showErrorMessage:true,
 
-                        valueChange:function(){
-                            row[fieldName] = editField.getValue();
-                        },
-                        status:"readonly"
-                    });
-                    editComps.push(editField);
-                    editField.render();
-                }
+                    valueChange:function(){
+                        row[fieldName] = editField.getValue();
+                    },
+                    status:"readonly"
+                });
+                editComps.push(editField);
+                editField.render();
             }
+        }
             if(vm.editComps){
                 vm.editComps = editComps;
             }else{
